comment pre tag overflow fixed

--- a/scss/_singlepost.scss
+++ b/scss/_singlepost.scss
@@ -43,6 +43,12 @@
 	max-width: 100%;
 }
 
+.comment-content {
+	pre {
+		white-space: pre-line;
+	}
+}
+
 .wp-block-pullquote {
 	border-left: 3px solid #c4c4c4;
 
